# DialogMesh

./: .dockerignore  .env.example  .gitignore  2.1  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.v4  IDEA.md  MANIFEST.md  Makefile  README.md  README_EN.md  cli.bat  cli.sh  docker-compose.v4.yml  docker-compose.yml  main.py  main_v3.py  plan.md  pyproject.toml  requirements.txt  run_chat.bat  run_chat.py  run_chat.sh  run_e2e_tests.py  start.bat  start.sh  stop.sh  test_utf8.txt  tui.bat  tui.sh  v32_graph.json  v32_graph_cli-1783426550.json  v32_graph_demo_1783316698.json  v32_graph_final.json  v32_graph_review_test.json  v32_graph_review_test_final.json  v32_graph_test_v32_integration_final.json
.github/workflows/: ci.yml  docker-build.yml  lint.yml
.hermes/desktop-attachments/: DOMAIN_REGISTRY.md  ONTOLOGY_ARCHITECTURE.md  PARAMETER_REGISTRY.md  SEEDS_L0L4_REFERENCE.md
.hermes/plans/: 2026-07-15_cognitive-profile-v2-phased.md  2026-07-15_cognitive-profile-v2.md
_artifacts/_research_downloads/: HyperMem_arxiv.html  TiMem_arxiv.html
_artifacts/v32_test/: session_1783317712.jsonl  (+4 more)
_research_downloads/: HiGMem_README.md  HyMEM_README.md  HyMEM_arxiv.html  HyperMem_README.md  Memos_README.md  TiMem_README.md
config/: agent_config.yaml  expertise_lexicon.yaml  runtime.yaml  user_config.yaml.example
core/: __init__.py  winapi.py
deploy/: .env.example  docker-compose.prod.yml  nginx.conf  prometheus.yml  pyproject.toml  requirements.txt
design/: design.md
docs/: ARCHITECTURE_INDEX.md  DESIGN_SPECIFICATION.md  KIMI_CLI.md  LLM_PROVIDER_GUIDE.md  MCP_DEPLOYMENT_BOUNDARY.md  QUICKSTART.md  TEST_REPORT.md  architecture_concept.md  implementation_assessment.md  industrial_assessment.md
frontend/: index.html  package-lock.json  package.json  serve.py  tailwind.config.js  vite.config.ts
gui/: __init__.py  dashboard.py  mcp_routes.py  server.py  streaming.py
gui_discourse/: __init__.py  app.py
i18n/: __init__.py
scripts/: api_v32.py  cli.py  cli_v32.py  dialogmesh.py  download_models.py  generate_task_planning_design.py  mcp_server.py  run.sh  start_dev.py  tui.py
service/: __init__.py  agent_service.py  async_session_manager.py  models.py  orchestrator.py
tests/: 50_rounds_result.txt  50_rounds_result_utf8.txt  50_rounds_semantic_result.txt  __init__.py  conftest.py  test_path_components_standalone.py
v32_logs_demo_1783316698/: session_1783316698.jsonl
v32_logs_review_test/: session_1783316715.jsonl
v32_test/: session_1783318267.jsonl  session_1783325985.jsonl
(+920 files in other folders)
